# ragnroll

./: .env-sample  .gitignore  README.md  pyproject.toml  ragnroll.code-workspace
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
backend/: README.md  build.sh  pyproject.toml  run.sh
backend/ragnroll/: __init__.py  app.py  db.py  endpoint.py  langchain.py  main.py  model.py  prompt.py  rag.py  util.py  view.py
backend/ragnroll/crud/: collection.py  db.py  model.py  view.py
components/neo4j_nvl/: README.md  pyproject.toml
components/neo4j_nvl/custom_components/reflex_neo4j_nvl/: __init__.py  neo4j_nvl.py
components/neo4j_nvl/custom_components/reflex_neo4j_nvl/asset/: index.js
components/neo4j_nvl/neo4j_nvl_demo/: requirements.txt  rxconfig.py
components/neo4j_nvl/neo4j_nvl_demo/neo4j_nvl_demo/: neo4j_nvl_demo.py
k8s/: devenv-cm.yaml  devenv-pvc.yaml  devenv-workload.yaml
ragnroll/: __init__.py  app.py  db.py  main.py  model.py  prompt.py  view.py
ragnroll/crud/: model.py
ragnroll/ragnroll/: __init__.py  ragnroll.py  state.py
ragnroll/ragnroll/backend/: __init__.py  app.py  config.py  main.py  model.py  prompt.py  rag.py  router.py  util.py
ragnroll/ragnroll/backend/endpoint/: search.py
ragnroll/ragnroll/backend/endpoint/resource/: expertise.py
ragnroll/ragnroll/components/: __init__.py  code_form.py  navbar.py  snippet.py  util.py
ragnroll/ragnroll/components/snippet/: __init__.py  barchart.py  line.py  table.py  text.py
ragnroll/ragnroll/page/: expertise.py  graph.py  search.py
web/: .gitignore  build.sh  pyproject.toml  run.sh
web/ragnroll/: rxconfig.py
web/ragnroll/ragnroll/: ragnroll.py
web/ragnroll_web/: rxconfig.py
web/ragnroll_web/ragnroll_web/: __init__.py  ragnroll_web.py  state.py
web/ragnroll_web/ragnroll_web/components/: __init__.py  crud.py  featuredSnippet.py  knowledgepanel.py  login.py  navbar.py  searchResult.py  sidebar.py  snippet.py  util.py
