[tool.poetry]
name = "ragnroll-web"
version = "0.1.0"
description = ""
authors = ["Izhar Firdaus <kagesenshi.87@gmail.com>"]
readme = "README.md"
packages = [{include = "ragnroll_web"}]

[tool.poetry.dependencies]
python = "^3.11"
reflex = "0.4.8.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
